	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
03/06
	* Added various new headgears thanks to Argatlahm [Playtester]
	- some headgears might not be fully official, feel free to report bugs if you find any
	- also updated item_db.sql
	* Fixed some weapons and their prices [Playtester]
	* Fixed Aegis name, price and weight of all special type items [Playtester]
	- beware of exploits due to the changed prices
	* Soul Breaker no longer ignores elemental adjustments. [Skotlex]
	* Added the 2 new packet versions to packet_db.txt [Zephiris]
03/02
	* Updated the stun length to 5 secs of: Meteor Storm, Sonic Blow, Throw
	  Stone, Sightless Raid, Smite, Cart Termination.
02/24
	* Updated skill_db.txt using the new nk values in hexadecimal. [Skotlex]
02/23
	* Official Aegis names for cards [Playtester]
	* Updated Box of thunder to use "agi up" effect for 30 secs instead of NPC
	  Agi Up for 20. [Skotlex]
	* Added and fixed some etc items [Playtester]
02/13
	* Fixed Bacsojin's mob id in mob_boss [Playtester]
02/12
	* Reverted Venom Splasher's element to take your weapon's
	* Corrected range of self destruction / bio explosion to be equal to their
	  splash range. [Skotlex]
02/10
	* Fixed Armeyer Dinze Card [Playtester]
	* Reverted Fly Wing and Butterfly Wing to the old version [Playtester]
	- old version has less problems
02/09
	* Spider web can again be recasted on target. [Skotlex]
02/08
	* Fixed a skill_db.txt typo for AS_ENCHANTPOISON introduced in r9794 [ultramage]
02/07
	* Modified Spider web so that it can't be casted on top of another web.
	* Updated the range of BioExplosion and Self Destruction so they count as
	  ranged skills.
02/05